<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.RecipesListFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipe_list_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        tools:itemCount="4"
        tools:listitem="@layout/view_holder_recipe_list"
        tools:scrollbars="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="16dp"
        android:clipToPadding="false"
        android:background="@android:color/white"
        />

</FrameLayout>