...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.StepDetailFragment"
    android:background="@android:color/white">

    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/recipe_video_player"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:animateLayoutChanges="true"
        app:controller_layout_id="@layout/custom_player_controller"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
